--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
         "express": "~4.15.2",
         "mongoose": "~4.9.4",
         "body-parser":"~1.17.1",
-        "method-override":"~2.3.8"
+        "method-override":"~2.3.8",
+        "passport":"~0.3.2",
+        "passport-local":"~1.0.0",
+        "passport-local-mongoose":"~4.0.0",
+        "cookie-parser":"~1.4.3",
+        "express-session": "~1.15.2"
     }
 }
