--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
         "passport-local":"~1.0.0",
         "passport-local-mongoose":"~4.0.0",
         "cookie-parser":"~1.4.3",
-        "express-session": "~1.15.2"
+        "express-session": "~1.15.2",
+        "connect-flash": "~0.1.1",
+        "bcrypt-nodejs": "latest"
     }
 }
